public/styles/main.css
body {
  height: 100vh;
}

#games-index-map .angular-google-map-container {
  min-height: calc(100vh - 175px);
}

#games-list {
  max-height: calc(100vh - 175px);
  overflow-y: scroll
}

#games-map .angular-google-map-container {
  height: calc(100vh - 200px);
  min-height: 200px;
}
#edit-title { 
    margin-right: 3px;
}

